CHATS_SIT/force-app/main/default/objects/CHATS_Weekly_Payment__c.object
<CustomObject>
    <description>CHATS Weekly Payment Report object</description>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CHATS Weekly Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CWP-{0000000}</displayFormat>
        <label>CHATS Weekly Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CHATS Weekly Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>